# tebra-content-os

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  PROMPT_TO_PASTE_IN_CLAUDE_CODE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: brief-author.md  citation-auditor.md  citation-reporter.md  compliance-qa.md  draft-writer.md  product-truth.md  refresh-auditor.md
.claude/commands/: audit.md  brief.md  citation-report.md  draft.md  refresh.md
.claude/hooks/: post-commit-changelog.sh  stop-run-linters.sh  (+2 more)
applications/: cover_letter.md  linkedin.md  resume.md  submission_checklist.md
audit/: citation-scores.jsonl  compliance.jsonl  publish.jsonl  tebra_citation_audit_2026-04-22.md
briefs/: tebra-vs-advancedmd-for-solo-practices.json
docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  E2E_DRY_RUN.md  FREELANCER_ONBOARDING.md  OPERATING_MODES.md  PRD.md  REPO_PRINCIPLES_EXTRACTED.md  RESEARCH_GAPS_AND_DECISIONS.md  RUNBOOK.md  TASKS.md
drafts/: smoke-test.md  tebra-vs-advancedmd-for-solo-practices.md
scripts/: citation_score.py  compliance_check.py  package_plugin.sh  refresh_append.py  schemas.py  validate_briefs.py  validate_drafts.py  validate_mcp_config.py  validate_skills.py  validate_sources.py
sources/: registry.json
tests/: test_citation_score.py  test_compliance_check.py  test_compliance_hook.py  test_mcp_config.py  test_refresh_append.py  test_schemas.py  test_subagent_contracts.py  test_validate_briefs.py  test_validate_drafts.py  test_validate_skills.py  test_validate_sources.py
(+28 files in other folders)
