[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tebra-content-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "httpx",
    "pydantic>=2",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
